force-app/main/default/objects/User/fields/Completed_Trails__c.field-meta.xml
<CustomField>
    <fullName>Completed_Trails__c</fullName>
    <label>Completed Trails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>