force-app/main/default/objects/User/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>