force-app/main/default/objects/User/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <formula>IF( Total_Points__c  &gt; 0 &amp;&amp; Total_Points__c &lt; 200 , &quot;SCOUT&quot;,
IF( Total_Points__c  &gt;= 200 &amp;&amp; Total_Points__c &lt; 3000 , &quot;HIKER&quot;,
IF( Total_Points__c  &gt;= 3000 &amp;&amp; Total_Points__c &lt; 9000 , &quot;EXPLORER&quot;,
IF( Total_Points__c  &gt;= 9000 &amp;&amp; Total_Points__c &lt; 18000 , &quot;ADVENTURER&quot;,
IF( Total_Points__c  &gt;= 18000 &amp;&amp; Total_Points__c &lt; 35000 , &quot;MOUNTAINEER&quot;,
IF( Total_Points__c  &gt;= 35000 &amp;&amp; Total_Points__c &lt; 50000 , &quot;EXPEDITIONER&quot;,
IF( Total_Points__c  &gt;= 50000, &quot;RANGER&quot;,
&quot;&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rank</label>
    <type>Text</type>
</CustomField>