force-app/main/default/objects/User/fields/Total_Badges__c.field-meta.xml
<CustomField>
    <fullName>Total_Badges__c</fullName>
    <label>Total Badges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>